[Skia] Fix canvas source-in globalCompositeOperation https://bugs.webkit.org/show_bug.cgi?id=272976

Reviewed by Carlos Garcia Campos.

* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::beginCompositeLayer):
(WebCore::CanvasRenderingContext2DBase::endCompositeLayer):

Canonical link: https://commits.webkit.org/277863@main